# MLNNLIB

./: CMakeLists.txt  README.md  main.cpp  valgrind.xml
Algorithms/K-means/headers/: Kmeans.h
Algorithms/K-means/source/: Kmeans.cpp
Algorithms/KNN/headers/: KNN.h
Algorithms/KNN/source/: KNN.cpp
ETL/headers/: DataProcessor.h
ETL/source/: DataProcessor.cpp
NN/: CMakeLists.txt
NN/headers/: Layer.h  NeuralNetwork.h  Neuron.h
NN/source/: Layer.cpp  NeuralNetwork.cpp  Neuron.cpp
NewPerceptron/: CMakeLists.txt
NewPerceptron/header/: Layer.h  Layers.h  Neuron.h  Web.h
NewPerceptron/source/: Layer.cpp  Layers.cpp  Neuron.cpp  Web.cpp
